--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "redux": "^4.0.5",
     "remax": "^2.3.0"
   },
   "devDependencies": {
