--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "remax": "^2.3.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
     "@types/react": "^16.9.16",
+    "@types/react-redux": "^7.1.9",
+    "cross-env": "^7.0.2",
     "typescript": "^3.7.3"
   }
 }
