feat: 添加查询建议

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "cross-env NODE_ENV=production remax build -t"
   },
   "dependencies": {
+    "@types/crypto-js": "^3.1.47",
+    "crypto-js": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
