--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "preserve",
     "rootDir": "src",
     "baseUrl": "./",
+    "allowJs": true,
     "paths": {
       "@/*": ["./src/*"]
     },
