feat: 添加列表页

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "lib": ["DOM", "ES2015"]
+    "lib": ["DOM", "ES2015"],
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": ["src/**/*", "typings/**/*"]
 }
