feat: 添加播放页面

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Ling2048 <L2048@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "remax build -w -t",
+    "dev": "cross-env REMAX_DEBUG=1 remax build -w -t",
     "build": "cross-env NODE_ENV=production remax build -t"
   },
   "dependencies": {
@@ -18,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "remax": "^2.3.0"
+    "remax": "^2.7.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.16",
