feat: 适配web,更新依赖

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    "outDir": "./dist",
     "lib": ["DOM", "ES2015"],
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
